// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Radio has a helptext 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option1_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_option1"
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option2_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_option2"
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
    <span
      class="form-text"
      id="radioField_fieldTip"
    >
      Type something
    </span>
  </div>
</div>
`;

exports[`Field Radio has a label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
  >
    <label
      aria-labelledby="radioField_fieldLabelHidden"
      class="ddm-label"
      id="radioField_fieldLabel"
      tabindex="0"
    >
      label
    </label>
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option1_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_option1"
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option2_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_option2"
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
    <span
      class="sr-only"
      id="radioField_fieldLabelHidden"
    >
      label
    </span>
  </div>
</div>
`;

exports[`Field Radio has a placeholder 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option1_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_option1"
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option2_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_option2"
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
  </div>
</div>
`;

exports[`Field Radio has a value 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option1_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_option1"
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option2_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_option2"
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
  </div>
</div>
`;

exports[`Field Radio has an id 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option1_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_option1"
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option2_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_option2"
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
  </div>
</div>
`;

exports[`Field Radio is not editable 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option1_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            disabled=""
            id="radioField_option1"
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option2_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            disabled=""
            id="radioField_option2"
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
  </div>
</div>
`;

exports[`Field Radio is not required 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option1_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_option1"
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option2_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_option2"
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
  </div>
</div>
`;

exports[`Field Radio renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
  >
    <label
      aria-labelledby="radioField_fieldLabelHidden"
      class="ddm-label"
      id="radioField_fieldLabel"
      tabindex="0"
    >
      text
    </label>
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option1_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_option1"
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_option2_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_option2"
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
    <span
      class="sr-only"
      id="radioField_fieldLabelHidden"
    >
      text
    </span>
  </div>
</div>
`;

exports[`Field Radio renders no options when options is empty 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    />
  </div>
</div>
`;

exports[`Field Radio renders options 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_item_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_item"
            name="radioField"
            role="radio"
            type="radio"
            value="item"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              label
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_item_fieldLabel"
      >
        label
      </span>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="radioField_fieldError"
            aria-invalid="true"
            aria-labelledby="radioField_item2_fieldLabel radioField_fieldLabel"
            aria-required="false"
            class="custom-control-input"
            id="radioField_item2"
            name="radioField"
            role="radio"
            type="radio"
            value="item2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              label2
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="radioField_item2_fieldLabel"
      >
        label2
      </span>
    </div>
  </div>
</div>
`;
